name:                image-blur
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable image-blur
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , friday
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
